    - split the color definitions into their own file
    - have the constants source that file
    - use that file when creating the user's local color palette
    - use a bit more orange
  * usr/bin/byobu-launcher-uninstall.in, usr/bin/byobu-launch.in: LP: #1292228
    - allow byobu-launch to pass arguments through to byobu-launcher
    - fix up the uninstallation of byobu launcher

  [ Kosuke Asami ]
  * usr/lib/byobu/battery: LP: #1289157, #1289157
    - Mac OS X battery indicator support

 -- Dustin Kirkland <kirkland@ubuntu.com>  Sun, 16 Mar 2014 12:46:36 -0700

byobu (5.74-0ubuntu1) trusty; urgency=low

  [ Dustin Kirkland ]
  * usr/lib/byobu/include/ec2instancespricing.py: LP: #1286367
    - merged in updated instance pricing script from
      https://github.com/erans/ec2instancespricing
  * usr/share/byobu/profiles/tmux: LP: #1273685
    - remove double sourcing of local .tmux.conf
  * usr/lib/byobu/battery: LP: #1270451
    - add support for yet another batter type (Android)
    - thanks to Felix Krull for the initial patch
  * usr/share/byobu/profiles/tmux: LP: #1270551
    - enable ctrl-left and ctrl-right to move among words

  [ Chris Johnston ]
  * usr/share/man/man1/byobu-layout.1: LP: #1288738
    - fix manpage typo

  [ Mike Miller ]
  * usr/lib/byobu/logo: LP: #1278006
    - fix RHEL detection for logo

  [ Daniel Hahler ]
  * usr/bin/byobu-keybindings: LP: #1258093
    - fix toggling of f-keys
  * usr/share/byobu/profiles/tmux: LP: #1258534
    - ensure that we respect BYOBU_NO_TITLE in tmux

  [ Ryo ONODERA ]
  * configure.ac, etc/profile.d/Z97-byobu.sh => etc/profile.d/Z97-
    byobu.sh.in, usr/bin/byobu-config => usr/bin/byobu-config.in,
    usr/bin/byobu-ctrl-a => usr/bin/byobu-ctrl-a.in, usr/bin/byobu-
    disable-prompt => usr/bin/byobu-disable-prompt.in, usr/bin/byobu-
    disable => usr/bin/byobu-disable.in, usr/bin/byobu-enable-prompt =>
    usr/bin/byobu-enable-prompt.in, usr/bin/byobu-enable =>